# winebox

./: CMakeLists.txt  vcpkg.json
cmake/: VersionFromGit.cmake
include/: config.h.in  cross.h
src/: CMakeLists.txt  dosbox.cpp
src/cpu/: CMakeLists.txt
src/debug/: CMakeLists.txt  debug.cpp
src/dos/: CMakeLists.txt  cdrom.cpp  cdrom_ioctl_linux.cpp
src/fpu/: CMakeLists.txt
src/gui/: CMakeLists.txt  sdlmain.cpp
src/hardware/: CMakeLists.txt
src/hardware/mame/: CMakeLists.txt
src/hardware/serialport/: CMakeLists.txt  libserial.cpp
src/ints/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/gui_tk/: CMakeLists.txt
src/misc/: CMakeLists.txt
src/shell/: CMakeLists.txt
